--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,19 @@
             <version>2.7</version>
             <scope>compile</scope>
         </dependency>
+        <!-- Update to version 5.2 was 3.17-->
+        <!-- Used to work with the newer excel file format - `.xlsx` -->
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.6.3</version>
+        </dependency>
         <!-- test library (not the newest) 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -63,7 +76,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>io.ost.finance.TransactionManager</mainClass>
+                            <mainClass>io.ost.finance.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -110,7 +123,7 @@
                                         <include>Bank-2-Budget.jar</include>
                                     </includes>
                                 </resource>
-                                   <resource>
+                                <resource>
                                     <directory>/</directory>
                                     <includes>
                                         <include>Rule-Builder.html</include>
