--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.13</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.49.1.0</version>  <!-- Check for latest version -->
+        </dependency>
     </dependencies>
 
     <build>
